--- a/style.css
+++ b/style.css
@@ -1,22 +1,35 @@
-:root {
-	--color-black: #121212;
-	--color-dark: #080808;
-	--color-white: #f2f2f2;
-	--color-grey: #d2d2d2;
-	--color-light: #bdbdbd;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+html{
+    font-family: 'Poppins', sans-serif;
 }
 body{
-    font-family: 'Poppins', sans-serif;
+ background: #fff;
+}
+/* Navigation */
+
+
+/* End Navigation */
+
+
+/* Hero strona głowna */
+#hero {
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(45deg, rgba(0, 0, 0, 0.6), rgba(70, 135, 145, 0.5)), url(image/medycyna-estetyczna.webp) fixed center ;
+    background-size: cover;
     position: relative;
-}
-a {
-	text-decoration: none;
-}
-ul {
-	list-style: none;
-}
+    
+  }
+
+  /* sekcja o nas */
+  #about{
+    width: 100%;
+    height: 100vh;
+  }
+  /* koniec sekcji o nas */
