--- a/style.css
+++ b/style.css
@@ -1,57 +1,155 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,700&display=swap');
 
-*,*::after,*::before{
-box-sizing: border-box;
-font-weight: 400;
-margin: 0;
-padding: 0;
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
+	font-weight: 400;
+	color: var(--color-2);
+	margin: 0;
+	padding: 0;
 }
 
-:root{
-  --color-1: #262621;
-  --color-2:#f2e2ce;
-  --color-3:#bf3f57;
+:root {
+	--color-1: #262621;
+	--color-2: #f2e2ce;
+	--color-3: #bf3f57;
 }
-body{
-  font-family: 'Cormorant Garamond', serif;
-  background: var(--color-1);
-  user-select: none;
+body {
+	font-family: 'Cormorant Garamond', serif;
+	background: var(--color-1);
+	
 }
-img{
-  display: flex;
-  width: 100%;height: 100%;
+img {
+	display: flex;
+	width: 100%;
+	height: 100%;
 }
-ul{
-  list-style: none;
+ul {
+	list-style: none;
 }
-a{
-display: inline-block;
-text-decoration: none;
-transition: 0.5s ease-in-out;
+a {
+	display: inline-block;
+	text-decoration: none;
+	transition: 0.5s ease-in-out;
 }
-.row{
-  display: flex;
+.row {
+	display: flex;
 }
-.flex{
-  flex-wrap: wrap;
-gap: 2rem;
+.flex {
+	flex-wrap: wrap;
+	gap: 2rem;
 }
 
-.flex>*{
-  flex: 1 1 25rem;
+.flex > * {
+	flex: 1 1 25rem;
 }
-.column{
-  display: grid;
+
+.container {
+	max-width: 90%;
+	margin: 0 auto;
 }
-.container{
-  max-width: 90%;
-  margin: 0 auto;
+
+/* Navigation */
+.logo {
+  width: 6rem;
 }
+header {
+	align-items: center;
+	justify-content: space-between;
+	gap: 2rem;
+	padding: 1rem 0;
+}
+.toggleMenu {
+	display: none;
+}
+nav, nav ul {
+  align-items: center;
+  gap: clamp(2rem, 5vw, 5rem)
+}
+
+nav ul a {
+	font-weight: 500;
+	font-size: 1.25rem;
+	text-transform: uppercase;
+}
+
+nav ul a:hover,
+nav ul a:active {
+	color: var(--color-3);
+}
+/* End Navigation */
+/* Page Button */
+.page-btn {
+	cursor: pointer;
+	font-weight: 500;
+	font-size: 1.25rem;
+	color: var(--color-3);
+	text-transform: uppercase;
+	background: transparent;
+	border: 1px solid var(--color-3);
+	padding: 0.4rem 1.5rem;
+	border-radius: 10px;
+	transition: 0.5s ease-in-out;
+}
+
+.page-btn:hover,
+.page-btn:active {
+	color: var(--color-2);
+	border-color: var(--color-2);
+  background: var(--color-3);
+	border-radius: 15px;
+}
+/* End Page Button */
 
 /* Media queries */
-@media (min-width:1300px) {
-  .container{
-    max-width: 1240px;
-  }
-  
+@media (min-width: 1300px) {
+	.container {
+		max-width: 1240px;
+	}
+}
+@media (max-width: 1000px) {
+	.toggleMenu {
+		display: flex;
+		cursor: pointer;
+		background-color: transparent;
+		background-image: url(icon/menu.png);
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: 30px;
+		width: 30px;
+		height: 30px;
+		z-index: 1000;
+		transition: background-size 0.5s ease-in-out;
+	}
+	.toggleMenu.active {
+		position: fixed;
+		right: 5%;
+		background-image: url(icon/close.png);
+		background-size: 30px;
+	}
+
+	nav {
+		position: absolute;
+		inset: 0;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		gap: 1rem;
+		min-height: 0;
+		opacity: 0;
+		transform: scale(0);
+		transition: opacity 0.5s ease-in-out;
+	}
+	nav.active {
+		position: fixed;
+		min-height: 100%;
+		opacity: 1;
+		background: var(--color-1);
+		z-index: 999;
+		transform: scale(1);
+	}
+	nav ul {
+		flex-direction: column;
+	}
 }
