ADDED HERO SECTION

--- a/style.css
+++ b/style.css
@@ -102,6 +102,10 @@ nav ul a:active {
 }
 /* End Page Button */
 
+/* HERO SECTION */
+
+/* END HERO SECTION */
+
 /* Media queries */
 @media (min-width: 1300px) {
 	.container {
