--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
 body {
 	font-family: 'Cormorant Garamond', serif;
 	background: var(--color-1);
-	
 }
 img {
 	display: flex;
@@ -52,7 +51,7 @@ a {
 
 /* Navigation */
 .logo {
-  width: 6rem;
+	width: 6rem;
 }
 header {
 	align-items: center;
@@ -63,9 +62,10 @@ header {
 .toggleMenu {
 	display: none;
 }
-nav, nav ul {
-  align-items: center;
-  gap: clamp(2rem, 5vw, 5rem)
+nav,
+nav ul {
+	align-items: center;
+	gap: clamp(2rem, 5vw, 5rem);
 }
 
 nav ul a {
@@ -97,13 +97,46 @@ nav ul a:active {
 .page-btn:active {
 	color: var(--color-2);
 	border-color: var(--color-2);
-  background: var(--color-3);
+	background: var(--color-3);
 	border-radius: 15px;
 }
 /* End Page Button */
 
 /* HERO SECTION */
+.hero {
+	flex-wrap: wrap-reverse;
+	padding: 2rem 0;
+}
+.hero-content {
+	align-self: center;
+}
+h1 {
+	font-weight: 700;
+	font-size: clamp(2.5rem, 5vw, 4rem);
+	text-transform: capitalize;
+}
+p {
+	font-size: clamp(1rem, 5vw, 1.25rem);
+	color: var(--color-3);
+}
+.hero-content p {
+	padding: 1.5rem 0;
+}
 
+.hero-img::after {
+	content: '';
+	position: absolute;
+	inset: 0;
+	width: 85%;height: 100%;
+	border: 0.25rem dashed var(--color-2);
+	border-radius: 50%;
+	transform: rotate(-5deg);
+	z-index: -1;
+}
+.hero-img img{
+	max-height: 600px;
+	object-fit: contain;
+}
 /* END HERO SECTION */
 
 /* Media queries */
