--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 	--color-3: #bf3f57;
 }
 body {
-	font-family: 'Cormorant Garamond', serif;
+	font-family: 'Cormorant Garamond', sans-serif;
 	background: var(--color-1);
 }
 img {
@@ -143,6 +143,74 @@ p {
 	/* height: 500px; */
 }
 /* END HERO SECTION */
+
+/* GALLERY */
+.swiper {
+	width: 100%;
+	height: 100%;
+  }
+
+  .swiper-slide {
+	text-align: center;
+	font-size: 18px;
+	background: #fff;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  }
+
+  .swiper-slide img {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+  }
+
+  body {
+	background: #000;
+	color: #000;
+  }
+
+  .swiper {
+	width: 100%;
+	height: 300px;
+	margin-left: auto;
+	margin-right: auto;
+  }
+
+  .swiper-slide {
+	background-size: cover;
+	background-position: center;
+  }
+
+  .mySwiper2 {
+	height: 80%;
+	width: 100%;
+  }
+
+  .mySwiper {
+	height: 20%;
+	box-sizing: border-box;
+	padding: 10px 0;
+  }
+
+  .mySwiper .swiper-slide {
+	width: 25%;
+	height: 100%;
+	opacity: 0.4;
+  }
+
+  .mySwiper .swiper-slide-thumb-active {
+	opacity: 1;
+  }
+
+  .swiper-slide img {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+  }
+/* END GALLERY */
 
 /* Media queries */
 @media (min-width: 1300px) {
