--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ nav ul a:active {
 	color: var(--color-2);
 	border-color: var(--color-2);
 	background: var(--color-3);
-	border-radius: 15px;
+	
 }
 /* End Page Button */
 
@@ -145,6 +145,24 @@ p {
 }
 /* END HERO SECTION */
 
+/* ABOUT SECTION */
+.about{
+	padding: 2rem 0;
+}
+.about-img img{
+	max-height: 620px;
+	object-fit: cover;
+	border-radius: 0 0 50% 0;
+}
+.about-content{
+	align-self: center;
+	padding: 0 2rem;
+}
+.about-content h2 {
+	padding: 1.5rem 0;
+}
+/* END ABOUT SECTION */
+
 /* GALLERY */
 .gallery{
 	padding: 2rem 0
@@ -167,6 +185,7 @@ h2{
 	font-size: 40px;
 }
 /* END GALLERY */
+
 
 /* Media queries */
 @media (min-width: 1300px) {
