--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 body {
 	font-family: 'Cormorant Garamond', sans-serif;
 	background: var(--color-1);
+	user-select: none;
 }
 img {
 	display: flex;
@@ -117,8 +118,8 @@ nav ul a:active {
 	height: 100vh;
 	background-image: linear-gradient(
 			45deg,
-			rgba(113, 21, 72, 0.189),
-			rgba(244, 0, 0, 0.29)
+			rgba(113, 99, 21, 0.189),
+			rgba(0, 191, 244, 0.29)
 		),
 		url(image/medycyna-estetyczna.webp);
 
@@ -188,6 +189,16 @@ h2 {
 	font-size: 40px;
 }
 /* END GALLERY */
+
+/* TREATMENTS */
+.treatments{
+	padding: 2rem 0;
+}
+
+.treatments .swiper-img{
+	overflow: hidden;
+}
+/* END TREATMENTS */
 
 /* Media queries */
 @media (min-width: 1300px) {
