--- a/style.css
+++ b/style.css
@@ -198,6 +198,23 @@ h2 {
 .treatments .swiper-img{
 	overflow: hidden;
 }
+.treatments .swiper-img img{
+	transition: 0.5s ease-in-out;
+}
+
+.treatments .swiper-slide:hover .swiper-img img{
+	transform: scale(1.05);
+}
+.treatments .swiper-content{
+	border: 1px solid var(--color-2);
+	padding: 0 1.5rem 1.5rem 1.5rem;
+	margin-top: 2rem;
+}
+.treatments .swiper-content p{
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
 /* END TREATMENTS */
 
 /* Media queries */
