--- a/style.css
+++ b/style.css
@@ -217,6 +217,56 @@ h2 {
 }
 /* END TREATMENTS */
 
+
+
+/* FOOTER */
+.footer{
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+.footer-content{
+	padding: 1.5rem 0;
+	max-width: 300px;
+}
+.media-links{
+	align-items: center;
+	gap: 2rem;
+}
+.media-links a{
+	transition: background 0.5s ease-in-out;
+}
+.media-links a:hover{
+	background: var(--color-2);
+	border-radius: 8px;
+}
+
+footer h4{
+	font-size: 1.5rem;
+	padding-bottom: 1.5rem;
+}
+footer ul li+li{
+	padding-top: 0.5rem;
+}
+footer ul a{
+	font-size: 1.2rem;
+	text-transform: capitalize;
+}
+footer ul a:hover{
+	color: var(--color-3);
+}
+footer ul+p{
+	padding-top: 1.5rem;
+}
+.copy-right{
+	font: 0.9rem;
+	color: var(--color-2);
+	text-align: center;
+}
+footer a{
+	height: 50px;
+}
+/* END FOOTER */
+
 /* Media queries */
 @media (min-width: 1300px) {
 	.container {
